# greentic-events-providers

./: .gitignore  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  all-code-scanning-alerts.json  pr-changed-files.txt  pr-comment.md  rust-toolchain.toml
.github/workflows/: ci.yml  codeql.yml  codex-security-fix.yml  dev-publish.yml  nightly-pack-smoke.yml  nightly-semver.yml  publish_packs.yml  tests.yaml
ci/: local_check.sh  no_hand_rolling.sh
components/events-provider-dummy/: Cargo.toml
components/events-provider-dummy/src/: describe.rs  lib.rs
components/events-provider-email/: Cargo.toml
components/events-provider-email-sendgrid/: Cargo.toml  component.manifest.json
components/events-provider-email-sendgrid/src/: describe.rs  lib.rs
components/events-provider-email-sendgrid/wit/events-provider-email-sendgrid/: interfaces.wit  world.wit
components/events-provider-email/src/: describe.rs  lib.rs
components/events-provider-sms/: Cargo.toml
components/events-provider-sms-twilio/: Cargo.toml  component.manifest.json
components/events-provider-sms-twilio/src/: describe.rs  lib.rs
components/events-provider-sms-twilio/wit/events-provider-sms-twilio/: world.wit
components/events-provider-sms/src/: describe.rs  lib.rs
components/events-provider-sms/wit/events-provider-sms/: interfaces.wit
components/events-provider-timer/: Cargo.toml  component.manifest.json
components/events-provider-timer/src/: describe.rs  lib.rs
components/events-provider-webhook/: Cargo.toml  component.manifest.json
components/events-provider-webhook/src/: describe.rs  lib.rs
crates/provider-common/: Cargo.toml
crates/provider-common/src/: component_v0_6.rs  helpers.rs  lib.rs  qa_invoke_bridge.rs
crates/provider-core/tests/: provisioning_conformance.rs
crates/provider-email/src/: lib.rs
crates/provider-email/tests/: integration_live.rs
docs/: email.md  hosts_secrets.md  live_email_provider.md
fixtures/packs/events_provider_dummy/: pack.yaml
fixtures/packs/events_provider_dummy/components/: component.manifest.json
fixtures/packs/events_provider_email/components/: component.manifest.json
fixtures/packs/events_provider_email_sendgrid/components/: component.manifest.json
fixtures/packs/events_provider_sms/components/: component.manifest.json
fixtures/packs/events_provider_sms_twilio/components/: component.manifest.json
fixtures/packs/events_provider_timer/components/: component.manifest.json
fixtures/packs/events_provider_webhook/: pack.yaml
fixtures/packs/events_provider_webhook/components/: component.manifest.json
fixtures/packs/events_provider_webhook/schemas/events/webhook/: config.schema.json
fixtures/packs/secrets_events_smoke/: pack.yaml
fixtures/packs/secrets_events_smoke/components/: component.manifest.json
packs/components/templates/: component.manifest.json
packs/components/templating.handlebars/: component.manifest.json
packs/events-dummy/: pack.json  pack.yaml
packs/events-email/: pack.json  pack.yaml
packs/events-email-sendgrid/: pack.json  pack.yaml
packs/events-email-sendgrid/assets/: setup.yaml
packs/events-sms/: pack.json  pack.yaml
packs/events-sms-twilio/: pack.json  pack.yaml
packs/events-sms-twilio/assets/: setup.yaml
packs/events-timer/: pack.json  pack.yaml
packs/events-timer/assets/: setup.yaml
packs/events-webhook/: pack.json  pack.yaml
packs/events-webhook/assets/: setup.yaml
packs/events-webhook/schemas/events/webhook/: config.schema.json
scripts/: build_packs.sh  provision_conformance.sh  publish_packs_oci.sh
