[workspace]
members = [
    "crates/provider-core",
    "crates/provider-webhook",
    "crates/provider-email",
    "crates/provider-sms",
    "crates/provider-timer",
    "crates/sbom-patch",
    "components/events-provider-dummy",
    "components/events-provider-webhook",
    "components/events-provider-timer",
    "components/events-provider-sms",
    "components/events-provider-email",
    "components/events-provider-email-sendgrid",
    "components/events-provider-sms-twilio",
    "components/stub-component-v060",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
version = "0.4.15"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22.1"
blake3 = "1"
ciborium = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
greentic-interfaces-guest = "0.4"
greentic-oauth-sdk = { version = "0.4" }
greentic-secrets = { version = "0.4" }
greentic-types = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5"] }
wit-bindgen = { version = "0.52", default-features = false, features = ["macros"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
