[workspace]
members = [
    "crates/provider-common",
    "crates/provider-core",
    "crates/provider-webhook",
    "crates/provider-email",
    "crates/provider-sms",
    "crates/provider-timer",
    "crates/sbom-patch",
    "components/events-provider-dummy",
    "components/events-provider-webhook",
    "components/events-provider-timer",
    "components/events-provider-sms",
    "components/events-provider-email",
    "components/events-provider-email-sendgrid",
    "components/events-provider-sms-twilio",
    "components/stub-component-v060",
]
default-members = [
    "crates/provider-common",
    "crates/provider-core",
    "crates/provider-webhook",
    "crates/provider-email",
    "crates/provider-sms",
    "crates/provider-timer",
    "crates/sbom-patch",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"
version = "1.1.0-dev.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22.1"
blake3 = "1"
greentic-interfaces-guest = ">=1.1.0-dev, <1.2.0-0"
greentic-types = ">=1.1.0-dev, <1.2.0-0"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"

[workspace.dependencies.ciborium]
version = "0.2"
default-features = false

[workspace.dependencies.chrono]
version = "0.4"
default-features = false
features = [
    "clock",
]

[workspace.dependencies.greentic-oauth-sdk]
version = ">=1.1.0-dev, <1.2.0-0"

[workspace.dependencies.greentic-secrets]
version = ">=1.1.0-dev, <1.2.0-0"

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "blocking",
    "form",
    "json",
    "rustls",
]

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5.2"

[workspace.dependencies.uuid]
version = "1"
features = [
    "v4",
    "v5",
]

[workspace.dependencies.wit-bindgen]
version = "0.52"
default-features = false
features = [
    "macros",
]

[workspace.dependencies.zip]
version = "0.6"
default-features = false
features = [
    "deflate",
]
