[package]
name = "events-provider-email-sendgrid"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
provider-common = { path = "../../crates/provider-common" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
greentic-types.workspace = true
tempfile.workspace = true

[package.metadata.component]
package = "greentic:events-provider-email-sendgrid"

[package.metadata.component.target]
path = "wit/events-provider-email-sendgrid"
world = "component-v0-v6-sendgrid"

[package.metadata.component.target.dependencies]
"greentic:state" = { path = "wit/events-provider-email-sendgrid/deps/state-store" }
"greentic:interfaces-types" = { path = "wit/events-provider-email-sendgrid/deps/interfaces-types" }
"greentic:provider-schema-core" = { path = "wit/events-provider-email-sendgrid/deps/provider-schema-core" }
