[package]
name = "events-provider-sms-twilio"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
provider-common = { path = "../../crates/provider-common" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
greentic-types.workspace = true
tempfile.workspace = true

[package.metadata.component]
package = "greentic:events-provider-sms-twilio"

[package.metadata.component.target]
path = "wit/events-provider-sms-twilio"
world = "component-v0-v6-twilio"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/events-provider-sms-twilio/deps/http" }
"greentic:secrets-store" = { path = "wit/events-provider-sms-twilio/deps/secrets-store" }
"greentic:interfaces-types" = { path = "wit/events-provider-sms-twilio/deps/interfaces-types" }
"greentic:provider-schema-core" = { path = "wit/events-provider-sms-twilio/deps/provider-schema-core" }
