[package]
name = "events-provider-sms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
provider-common = { path = "../../crates/provider-common" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
greentic-types.workspace = true
tempfile.workspace = true

[package.metadata.component]
package = "greentic:events-provider-sms"

[package.metadata.component.target]
path = "wit/events-provider-sms"
world = "component-v0-v6-v0"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/events-provider-sms/deps/http" }
"greentic:secrets-store" = { path = "wit/events-provider-sms/deps/secrets-store" }
"greentic:interfaces-types" = { path = "wit/events-provider-sms/deps/interfaces-types" }
"greentic:provider-schema-core" = { path = "wit/events-provider-sms/deps/provider-schema-core" }
